--- a/scss/elements/_select.scss
+++ b/scss/elements/_select.scss
@@ -13,7 +13,7 @@
   background-position: right 12px top 15px;
   background-size: 6px 10px;
 
-  &:hover {
+  &:focus {
     outline: $outline-active;
   }
   
