--- a/site/themes/spuit/layouts/_default/baseof.html
+++ b/site/themes/spuit/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
     </button>
 
     {{ if eq .IsHome false }}
-    {{ partial "parts/breadcrumbs" . }}
+    {{/* partial "parts/breadcrumbs" . */}}
     {{ end }}
 
     <div class="content">
