--- a/site/themes/spuit/layouts/partials/footer.html
+++ b/site/themes/spuit/layouts/partials/footer.html
@@ -1,3 +1,5 @@
 <footer class="footer">
+  <a href="https://github.com/is8r/spuit" target="_blank" class="no-underline">🐙</a>
+  <a href="https://twitter.com/is8r_" target="_blank" class="no-underline">🐥</a>
   {{ .Site.Copyright }}
 </footer>
