--- a/site/themes/spuit/layouts/_default/single.html
+++ b/site/themes/spuit/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 
 <div class="entry {{ .Params.class }}">
-  <h1>{{ .Title }}</h1>
-  {{ partial "parts/info" . }}
+  <h1 class="mt-0">{{ .Title }}</h1>
+  {{/* partial "parts/info" . */}}
 
   <div class="entry__content">
     {{ .Content }}
