--- a/site/themes/spuit/layouts/partials/widgets/search-modal.html
+++ b/site/themes/spuit/layouts/partials/widgets/search-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="search" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="search-modal modal fade" id="search" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
